Fix mobile background image visibility and layout

--- a/src/components/home/index.css
+++ b/src/components/home/index.css
@@ -3,7 +3,7 @@
   height: 100vh;
   position: relative;
   overflow: hidden;
-      font-family: "Comic Neue", cursive;
+  font-family: "Comic Neue", cursive;
 
 }
 
@@ -31,7 +31,7 @@
   text-align: center;
   align-content: center;
   justify-content: center;
-  margin-top: 150px;
+  margin-top: 220px;
 
 }
 
